# neurenix

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build_rust_extension.py  mkdocs.yml  pyproject.toml  setup.py  sonar-project.properties  test_import_fix.py  test_import_structure.py  test_import_verification.py  test_imports.py  test_neurenix.py  test_package_config.py  test_phynexus.py  test_tensor_numpy.py  verify_conda_install.py
.github/workflows/: build.yml  notify-bot.yml
conda-recipe/: meta.yaml
docs/: FRAMEWORK_COMPARISON.md  PLACEHOLDER_IMPLEMENTATIONS.md  README.md  documentation_plan.md  index.md  installation.md  requirements.txt
docs/api/: agent.md  async_train.md  automl.md  cli.md  continual.md  core.md  data.md  distributed.md  distributed_computing.md  docker.md  explainable.md  federated.md  fuzzy.md  gnn.md  hardware.md  huggingface.md  huggingface_integration.md  kubernetes.md  mas.md  memory.md  meta.md  meta_learning.md  multiscale.md  neuro_symbolic.md  neuroevolution.md  nn.md  optim.md  optimization.md  quantum.md  reinforcement_learning.md  rl.md  tensor.md  transfer.md  transfer_learning.md  unsupervised.md  unsupervised_learning.md  wasm.md  webassembly.md  zeroshot.md
docs/hardware/: tpu.md
examples/: go_distributed_training.go  unsupervised_learning.py  webassembly_integration.py
neurenix/: __init__.py  binding.py  core.py  device.py  tensor.py
neurenix/data/: __init__.py  dataset_hub.py
neurenix/distributed/: __init__.py  data_parallel.py  distributed.py  pycuda_integration.py  rpc.py  sync.py
neurenix/huggingface/: trainer.py
neurenix/kubernetes/: deployment.py
neurenix/mas/: __init__.py  agent.py  communication.py  coordination.py  environment.py  environment_network.py  learning.py
neurenix/meta/: maml.py  model.py  reptile.py
neurenix/neuro_symbolic/: __init__.py  differentiable_logic.py  knowledge_distillation.py  neural_symbolic.py  (+2 more)
src/phynexus/rust/: Cargo.toml
src/phynexus/rust/src/: device.rs  dtype.rs  error.rs  graph.rs  lib.rs  memory.rs  nn.rs  ops.rs.bak  optimizer.rs  python.rs  quantization.rs  tensor.rs  tensor_ops.rs
src/phynexus/rust/src/async_train/: async_trainer.rs  checkpoint.rs  distributed.rs  mod.rs  resume.rs
src/phynexus/rust/src/automl/: mod.rs  model_selection.rs  nas.rs  pipeline.rs  search.rs
src/phynexus/rust/src/continual/: distillation.rs  ewc.rs  mod.rs  regularization.rs  replay.rs  synaptic.rs
src/phynexus/rust/src/data/: arrow.rs  dataset_hub.rs  mod.rs  parquet.rs
src/phynexus/rust/src/distributed/: deepspeed.rs  horovod.rs  mod.rs  mpi.rs
src/phynexus/rust/src/explainable/: activation.rs  counterfactual.rs  feature_importance.rs  lime.rs  mod.rs  partial_dependence.rs  shap.rs
src/phynexus/rust/src/hardware/: arm.rs  cpu.rs  cuda.rs  directml.rs  fpga.rs  graphcore.rs  mkldnn.rs  mod.rs  multi_device.rs  npu.rs  oneapi.rs  onednn.rs  opencl.rs  rocm.rs  tensor_cores.rs  tensorrt.rs  tpu.rs  vulkan.rs  webgpu.rs
src/phynexus/rust/src/learning/: meta.rs  mod.rs  transfer.rs  unsupervised.rs
src/phynexus/rust/src/mas/: agent.rs  communication.rs  coordination.rs  environment.rs  learning.rs  mod.rs
src/phynexus/rust/src/memory/: hmm.rs  mod.rs  unified.rs
src/phynexus/rust/src/multiscale/: fusion.rs  mod.rs  models.rs  pooling.rs  transforms.rs
src/phynexus/rust/src/neuro_symbolic/: differentiable_logic.rs  knowledge_distillation.rs  mod.rs  neural_symbolic.rs  reasoning.rs  symbolic.rs
src/phynexus/rust/src/neuroevolution/: cmaes.rs  evolution_strategy.rs  genetic.rs  hyperneat.rs  mod.rs  neat.rs
src/phynexus/rust/src/ops/: activation.rs  arm_elementwise.rs  conv.rs  elementwise.rs  matmul.rs  mod.rs  npu_elementwise.rs  reduction.rs  tpu.rs  tpu_elementwise.rs
src/phynexus/rust/src/ops/arm/: mod.rs
src/phynexus/rust/src/ops/blas/: blas_old.rs  copy.rs  mod.rs  transpose.rs
src/phynexus/rust/src/ops/conv/: conv2d.rs  conv_old.rs  mod.rs
src/phynexus/rust/src/ops/init/: mod.rs
src/phynexus/rust/src/ops/npu/: mod.rs
src/phynexus/rust/src/ops/rnn/: mod.rs
src/phynexus/rust/src/ops/tpu/: mod.rs
src/phynexus/rust/src/python/: mod.rs  quantization.rs
src/phynexus/rust/src/quantum/: algorithms.rs  cirq.rs  hybrid.rs  mod.rs  qiskit.rs  utils.rs
src/phynexus/rust/src/wasm/: mod.rs  multithreaded.rs
src/phynexus/rust/src/zeroshot/: classifier.rs  embedding.rs  mod.rs  model.rs  utils.rs
src/phynexus/rust/src/zkp/: bulletproofs.rs  mod.rs  proof_system.rs  sigma.rs  utils.rs  zk_snark.rs  zk_stark.rs
src/phynexus/rust/tests/: tpu_tests.rs
(+174 files in other folders)
