[package]
name = "phynexus"
version = "1.0.0"
edition = "2021"
authors = ["Neurenix Team"]
description = "Empowering Intelligent Futures, One Edge at a Time."
license = "Apache-2.0"
repository = "https://github.com/MilesONerd/Neurenix"

[lib]
name = "_phynexus"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
rayon = "1.7.0"
num-traits = "0.2.16"
thiserror = "1.0.47"
log = "0.4.20"
env_logger = "0.10.0"
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py38", "multiple-pymethods"] }
numpy = { version = "0.19.0", features = ["nalgebra"] }
nalgebra = "0.32.3"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[features]
default = ["cpu"]
cpu = []
cuda = []
rocm = []
webgpu = []
tpu = []
python = ["pyo3/extension-module"]
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "GpuDevice", "GpuBuffer", "GpuShaderModule",
    "GpuComputePipeline", "GpuCommandEncoder"
], optional = true }
